# firebot

./: CMakeLists.txt  README.md  package.xml
config/: etherbotix.yaml  fire_fighter.urdf  firebot.urdf  map_shrunk_arena.pgm  map_shrunk_arena.yaml  mapper_params_online_sync.yaml  nav2_params.yaml  ndt_localization.yaml  ndt_mapping.yaml  top_deck.stl
config/robogames/: metadata.yaml  robogames.mcap
launch/: build_map.launch.py  build_map_ndt.launch.py  drivers.launch.py  drivers_launch.py  firebot.launch.py  localization.launch.py  localization_ndt.launch.py  navigation.launch.py  ndt_2d_localize.launch.py  teleop.launch.py
nodes/: lepton_driver.py  localize.py  main.py  poses.py
